@@ -1817,6 +1817,17 @@
       </component>
     </version>
   </module>
+  <module name="gtranslator">
+    <version release="gnome-2.4">
+      <component name="gtranslator" dir="gtranslator" group="extras">
+	<podir dir="po"/>
+	<potname name="gtranslator.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gturing">
     <version release="gnome-1.4">
       <component name="gturing" dir="gturing" group="extras">
