@@ -1,3 +1,7 @@
+2003-06-12  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added back gtranslator.
+
 2003-06-10  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnome-netstatus.
